--- a/front-end/src/app/app.component.scss
+++ b/front-end/src/app/app.component.scss
@@ -3,91 +3,35 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #E0EAF5;
 }
 
 .app-layout {
   height: 100vh;
 }
 
-<<<<<<< HEAD
 nz-header {
   display: flex;
   padding: 0;
   width: 100%;
   z-index: 2;
   background: white;
-=======
-.menu-sidebar {
-  position: relative;
-  z-index: 10;
-  min-height: 100vh;
-  box-shadow: 2px 0 6px rgba(0,21,41,.35);
-}
-
-.header-trigger {
-  height: 64px;
-  padding: 20px 24px;
-  font-size: 20px;
-  cursor: pointer;
-  transition: all .3s,padding 0s;
-}
-
-.trigger:hover {
-  color: #1890ff;
-}
-
-.sidebar-logo {
-  position: relative;
-  height: 64px;
-  padding-left: 24px;
-  overflow: hidden;
-  line-height: 64px;
-  background: #001529;
-  transition: all .3s;
-}
-
-.sidebar-logo img {
-  display: inline-block;
-  height: 32px;
-  width: 32px;
-  vertical-align: middle;
-}
-
-.sidebar-logo h1 {
-  display: inline-block;
-  margin: 0 0 0 20px;
-  color: #fff;
-  font-weight: 600;
-  font-size: 14px;
-  font-family: Avenir,Helvetica Neue,Arial,Helvetica,sans-serif;
-  vertical-align: middle;
-}
-
-nz-header {
-  padding: 0;
-  width: 100%;
-  z-index: 2;
->>>>>>> 2c3d6868e3d54639d175160bd83790f837929790
 }
 
 .app-header {
   position: relative;
-  height: 64px;
+  min-height: 64px;
+  height: fit-content;
   padding: 0;
-  background: #fff;
+  background: #E0EAF5;
   box-shadow: 0 1px 4px rgba(0,21,41,.08);
-}
-
-nz-content {
-  margin: 24px;
 }
 
 .inner-content {
   padding: 24px;
-  background: #fff;
+  background: #E0EAF5;
   height: 100%;
 }
-<<<<<<< HEAD
 
 .logo {
   height: 90%;
@@ -101,5 +45,10 @@ img {
 .list {
   width: 90%;
 }
-=======
->>>>>>> 2c3d6868e3d54639d175160bd83790f837929790
+
+nz-header {
+  border-bottom: 1px solid #f0f0f0;
+}
+.ant-menu {
+  height: 64px;
+}
