:ok_hand: style: melhorias de estilizacao na tela inicial

--- a/front-end/src/app/app.component.scss
+++ b/front-end/src/app/app.component.scss
@@ -29,8 +29,8 @@ nz-header {
 
 .inner-content {
   padding: 24px;
-  background: #E0EAF5;
   height: 100%;
+  background-color: #E0EAF5;
 }
 
 .logo {
