--- a/front-end/src/app/pages/inicio/inicio.component.scss
+++ b/front-end/src/app/pages/inicio/inicio.component.scss
@@ -5,7 +5,8 @@ nz-card{
 }
 
 img {
-    height: 100%;
+    height: 5em;
+    margin: 0 auto;
 }
 
 .botao {
@@ -14,9 +15,8 @@ img {
     border-radius: 16px;
 }
 
-.botaoGerenciar {
-    background-color: blue;
-}
+
+
 
 .botaoAdicionar {
     background-color: green;
@@ -24,3 +24,41 @@ img {
     padding: 0;
     margin: 0;
 }
+
+.botaoGerenciar {
+    background-color: #005CAA;
+}
+
+.botaoGerenciarTodos{
+    background-color: #005CAA;
+    width: 50%;
+    height: 3em;
+}
+
+
+
+.gerenciarTodos{
+    text-align: center;
+}
+
+.container{
+    max-width: 90%;
+    margin: 0 auto;
+}
+
+.compartilhar{
+    max-height: 8em;
+    margin-bottom: 1em;
+}
+
+.compartilhar{
+    max-height: 8em;
+    margin-bottom: 2em;
+}
+.compartilhar img{
+    height: 5em;
+    margin: auto, 0;
+
+}
+
+
