--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -7,8 +7,8 @@
       <div class="list">
         <ul nz-menu nzTheme="light" nzMode="horizontal">
           <li nz-menu-item routerLink="/inicio" routerLinkActive="active">Início</li>
-          <li nz-menu-item routerLink="/teste" routerLinkActive="active">ICMS</li>
-          <li nz-menu-item routerLink="/table">Faturas</li>
+          <li nz-menu-item routerLink="/icms" routerLinkActive="active">ICMS</li>
+          <li nz-menu-item routerLink="/teste">Faturas</li>
           <li nz-menu-item>Sobre</li>
         </ul>
       </div>
