:recycle: refactor: modificando a maneira de fazer as rotas

--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="list">
         <ul nz-menu nzTheme="light" nzMode="horizontal">
-          <li nz-menu-item routerLink="/inicio" routerLinkActive="active">Início</li>
+          <li nz-menu-item routerLink="/" routerLinkActive="active">Início</li>
           <li nz-menu-item routerLink="/icms" routerLinkActive="active">ICMS</li>
           <li nz-menu-item routerLink="/teste">Faturas</li>
           <li nz-menu-item>Sobre</li>
