:ok_hand: style: Melhoria na organização para as janelas de icms

--- a/front-end/src/app/pages/inicio/inicio.component.html
+++ b/front-end/src/app/pages/inicio/inicio.component.html
@@ -44,7 +44,7 @@
       <tr>
         <td colspan="3" class="gerenciarTodos">
           <ng-container>
-            <button nz-button [nzSize]="'large'" class="botao botaoGerenciarTodos">Gerenciar Todos</button>
+            <button nz-button [nzSize]="'large'" class="botao botaoGerenciarTodos" routerLink="/icms" routerLinkActive="active">Gerenciar Todos</button>
           </ng-container>
         </td>
       </tr>
