--- a/front-end/src/app/pages/icms/notas-processadas/notas-processadas.component.html
+++ b/front-end/src/app/pages/icms/notas-processadas/notas-processadas.component.html
@@ -4,61 +4,58 @@
 
     <a href="/" class="link-top">
         <nz-card [nzHoverable]="true" class="empresa">
-            <tr>
-                <td [nzAlign]="'center'">
-                    <img src="../../../assets/svgs/empresa.svg" height="30px" width="30px">
-                </td>
-                <td colspan="2">
-                    <nz-flex [nzVertical]="true" class="empresa-name">
-                        <h3>Recol Distribuição e Comércio LTDA</h3>
-                        <p>Compra de licença dd-MM-yyyy</p>
-                    </nz-flex>
-                </td>
+            <table>
+                <tr>
+                    <td [nzAlign]="'left'" colspan="2">
+                        <img src="../../../assets/svgs/empresa.svg" class="logo-empresa">
+                        <nz-flex [nzVertical]="true" class="empresa-name">
+                            <h3>Recol Distribuição e Comércio LTDA</h3>
+                            <p>Compra de licença dd-MM-yyyy</p>
+                        </nz-flex>
+                    </td>
 
-                <td [nzAlign]="'right'" colspan="4" class="empresa-buttom">
-                    <ng-container>
-                        <button nz-button [nzSize]="'large'" class="botao botaoEdit"><img
-                                src="../../../assets/svgs/pencil.svg" height="30px" width="30px" class="edit"></button>
-                    </ng-container>
-                </td>
-            </tr>
-
-            <tr>
-                <td class="empresa-dados">
-                    <nz-flex [nzVertical]="true" class="empresa-dados">
-                    </nz-flex>
-                </td>
-                <td class="empresa-dados">
-                    <nz-flex [nzVertical]="true" class="empresa-dados">
-                        <h3>CNPJ:</h3>
-                        <p>24.745.870/0001-90</p>
-                    </nz-flex>
-                </td>
-                <td class="empresa-dados">
-                    <nz-flex [nzVertical]="true" class="empresa-dados">
-                        <h3>E-mail:</h3>
-                        <p>recolgmail.com</p>
-                    </nz-flex>
-                </td>
-                <td class="empresa-dados">
-                    <nz-flex [nzVertical]="true" class="empresa-dados">
-                        <h3>Telefone:</h3>
-                        <p>(68) 99999-9999</p>
-                    </nz-flex>
-                </td>
-                <td class="empresa-dados">
-                    <nz-flex [nzVertical]="true" class="empresa-dados">
-                        <h3>Cidade:</h3>
-                        <p>Rio Branco - AC</p>
-                    </nz-flex>
-                </td>
-                <td class="empresa-dados">
-                    <nz-flex [nzVertical]="true" class="empresa-dados">
-                        <h3>Endereço:</h3>
-                        <p>Rua Sete de Setembro, 458</p>
-                    </nz-flex>
-                </td>
-            </tr>
+    
+                    <td [nzAlign]="'right'" colspan="4" class="empresa-buttom">
+                        <ng-container>
+                            <button nz-button [nzSize]="'large'" class="botao botaoEdit"><img
+                                    src="../../../assets/svgs/pencil.svg" height="30px" width="30px" class="edit"></button>
+                        </ng-container>
+                    </td>
+                </tr>
+    
+                <tr>
+                    <td class="empresa-dados">
+                        <nz-flex [nzVertical]="true" class="empresa-dados">
+                            <h3>CNPJ:</h3>
+                            <p>24.745.870/0001-90</p>
+                        </nz-flex>
+                    </td>
+                    <td class="empresa-dados">
+                        <nz-flex [nzVertical]="true" class="empresa-dados">
+                            <h3>E-mail:</h3>
+                            <p>recolgmail.com</p>
+                        </nz-flex>
+                    </td>
+                    <td class="empresa-dados">
+                        <nz-flex [nzVertical]="true" class="empresa-dados">
+                            <h3>Telefone:</h3>
+                            <p>(68) 99999-9999</p>
+                        </nz-flex>
+                    </td>
+                    <td class="empresa-dados">
+                        <nz-flex [nzVertical]="true" class="empresa-dados">
+                            <h3>Cidade:</h3>
+                            <p>Rio Branco - AC</p>
+                        </nz-flex>
+                    </td>
+                    <td class="empresa-dados">
+                        <nz-flex [nzVertical]="true" class="empresa-dados">
+                            <h3>Endereço:</h3>
+                            <p>Rua Sete de Setembro, 458</p>
+                        </nz-flex>
+                    </td>
+                </tr>
+            </table>
             
         </nz-card>
     </a>
