apenas uma adicao estetica

--- a/front-end/src/app/pages/icms/notas-carregar/notas-carregar.component.html
+++ b/front-end/src/app/pages/icms/notas-carregar/notas-carregar.component.html
@@ -71,10 +71,15 @@
           <span nz-icon nzType="inbox"></span>
         </p>
         <p class="ant-upload-text">Selecione um arquivo ou arraste e solte aqui</p>
-        <p class="ant-upload-text">XML</p>
         <p class="ant-upload-hint">
-          Support for a single or bulk upload. Strictly prohibit from uploading company data or other band files
+            Suporte para upload único ou em massa. arquivos XML.
         </p>
+        <ng-container>
+            <div class="selecinar">
+                <p >Selecionar</p>
+            </div>
+            
+        </ng-container>
       </nz-upload>
     </nz-card>
 
