--- a/front-end/src/app/pages/icms/notas-carregar/notas-carregar.component.scss
+++ b/front-end/src/app/pages/icms/notas-carregar/notas-carregar.component.scss
@@ -34,3 +34,12 @@ nz-card{
     width: 3em;
     border-radius: 16px;
 }
+
+.selecinar p{
+    background-color: #00000000;
+    font-size: 1.5em;
+    border: 2px solid #40a9ff;
+    border-radius: 10px;
+    width: 25%;
+    margin: auto;
+}
