--- a/front-end/src/app/pages/icms/notas-processadas/notas-processadas.component.html
+++ b/front-end/src/app/pages/icms/notas-processadas/notas-processadas.component.html
@@ -2,7 +2,7 @@
 
     <h1>ICMS - Notas Processadas</h1>
 
-    <a href="/" class="link-top">
+    <a href="/" class="link-top" routerLink="/icms/empresa-form" routerLinkActive="active">
         <nz-card [nzHoverable]="true" class="empresa">
             <table>
                 <tr>
@@ -64,9 +64,11 @@
     <nz-table #headerTable [nzData]="empresas" [nzShowPagination]="false" class="table">
         <thead>
             <tr>
-                <td nzWidth="5%" [nzAlign]="'right'" colspan="8" class="btt-add"><ng-container>
-                        <button nz-button [nzSize]="'large'" class="botao botaoAdicionar">Adicionar Nota</button>
-                    </ng-container></td>
+                <td nzWidth="5%" [nzAlign]="'right'" colspan="8" class="btt-add">
+                    <ng-container>
+                        <button nz-button [nzSize]="'large'" class="botao botaoAdicionar" routerLink="/icms/notas-carregar" routerLinkActive="active">Adicionar Nota</button>
+                    </ng-container>
+                </td>
             </tr>
         </thead>
         <tbody>
