--- a/front-end/src/app/pages/icms/notas-carregar/notas-carregar.component.html
+++ b/front-end/src/app/pages/icms/notas-carregar/notas-carregar.component.html
@@ -2,7 +2,7 @@
 
     <h1>ICMS - Carregar Notas</h1>
 
-    <a href="/" class="link-top" routerLink="/icms/empresa-form" routerLinkActive="active">
+    <a href="/empresa-form" class="link-top" >
         <nz-card [nzHoverable]="true" class="empresa">
             <table>
                 <tr>
