--- a/front-end/src/app/pages/icms/notas-carregar/notas-carregar.component.scss
+++ b/front-end/src/app/pages/icms/notas-carregar/notas-carregar.component.scss
@@ -35,6 +35,14 @@ nz-card{
     border-radius: 16px;
 }
 
+.botaoEnviar {
+  margin-top: 5px;
+  background-color: #005CAA;
+  height: 3em;
+  border-radius: 8px;
+  color: white;
+}
+
 .selecinar p{
     background-color: #00000000;
     font-size: 1.5em;
