--- a/front-end/src/app/pages/icms/empresa-form/empresa-form.component.scss
+++ b/front-end/src/app/pages/icms/empresa-form/empresa-form.component.scss
@@ -1,3 +1,4 @@
+
 div .obj{
 
     font-size: 20px;
@@ -51,4 +52,8 @@ span{
     font-size: x-large;
     padding: 0;
     margin: 0;
+}
+
+h3 {
+    font-size: 2em;
 }
