Commit de sincronização: Implementação da página de alíquotas

--- a/front-end/src/app/pages/icms/icms-home/icms-home.component.html
+++ b/front-end/src/app/pages/icms/icms-home/icms-home.component.html
@@ -57,7 +57,7 @@
   </nz-table>
   <div class="paginacao">
     <nz-pagination [nzPageIndex]="paginaIndex" [nzTotal]="total" nzShowSizeChanger [nzPageSize]="paginaTamanho"
-      (nzPageIndexChange)="atulizarPagina($event)" (nzPageSizeChange)="tamanhoPagina($event)"
+      (nzPageIndexChange)="atualizarPagina($event)" (nzPageSizeChange)="tamanhoPagina($event)"
       [nzPageSizeOptions]=[5,10,20,30,40,50]>
     </nz-pagination>
   </div>
