--- a/front-end/src/app/pages/teste/teste.component.html
+++ b/front-end/src/app/pages/teste/teste.component.html
@@ -25,7 +25,7 @@
                   <li nz-menu-item>option4</li>
                 </ul>
               </li>
-              <li nz-submenu nzTitle="subnav 2" nzIcon="laptop">
+              <li nz-submenu nzTitle="subnav 2" nzIcon="credit-card">
                 <ul>
                   <li nz-menu-item>option5</li>
                   <li nz-menu-item>option6</li>
