--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -17,7 +17,7 @@
       </div>
     </nz-header>
     <nz-content>
-      <div class="inner-content">
+      <div class="inner-content" id="inner-content">
         <router-outlet></router-outlet>
       </div>
     </nz-content>
