--- a/front-end/src/app/pages/icms/regras-de-processamento/regras-de-processamento.component.scss
+++ b/front-end/src/app/pages/icms/regras-de-processamento/regras-de-processamento.component.scss
@@ -7,7 +7,7 @@ nz-card{
     min-height: 15em;
     padding: 0;
   }
-  
+
   img {
     height: 5em;
     margin: 0 auto;
@@ -20,14 +20,14 @@ nz-card{
   button img.edit{
     height: 2em;
   }
-  
+
   .botao {
     color: white;
     border-radius: 16px;
     margin-right: 0;
   }
-  
-  
+
+
   .botaoAdicionar {
     min-width: 150px;
     background-color: #005CAA;
@@ -35,44 +35,20 @@ nz-card{
     margin: 0.5em 1em 0 0;
   }
 
-  .botaoEdit {
-    padding: 0;
-    background-color: #005CAA;
-    height: 3em;
-    width: 3em;
-  }
-  
-  .botaoGerenciar {
-    padding: 0;
-    background-color: #005CAA;
-    height: 3em;
-    width: 3em;
+  div.btt-add{
+    margin-right: 1em;
   }
 
-  .botaoDownload {
-    padding: 0;
-    background-color: #005CAA;
-    height: 3em;
-    width: 3em;
-  }
-  
-  .botaoGerenciarTodos{
-    background-color: #005CAA;
-    width: 50%;
-    height: 3em;
-  }
-  
-  
-  .gerenciarTodos{
-    text-align: center;
-  }
-  
   nz-card.empresa{
-    max-height: 90vh;
+    max-height: 70vh;
     margin-bottom: 2em;
     padding: 0;
+    max-width: 100em;
   }
 
+  nz-card div.name{
+    display: block;
+  }
 
   .link-top{
     padding: 0;
@@ -86,11 +62,11 @@ nz-card{
   .empresa h3 , .empresa p{
     margin: 0;
   }
-  
+
 
   .empresa-name{
-    margin-left: 1em;
-    display: inline-block;
+    margin: 0 0 1em 1em;
+    display: block;
   }
 
   td.empresa-buttom{
@@ -99,7 +75,8 @@ nz-card{
 
   div.empresa-dados-maior{
     display: flex;
-    
+    flex-wrap: wrap;
+
   }
 
   nz-flex.empresa-dados{
@@ -107,7 +84,36 @@ nz-card{
     display: block;
   }
 
-  .paginacao {
-    text-align: right;
-    margin: 2em 0;
+  .empresa-dados p{
+    background-color: #E0EAF5;
+    font-size: 15px;
+    border-radius: 0.5em;
+    padding: 0.5em;
+    max-width: 25em;
+    margin-bottom: 1em;
+  }
+
+  .input{
+    border-radius: 0.5em;
+    padding: 0 0.5em;
+    width: 12em;
+    height: 2.5em;
 }
+
+.scrollbar {
+    overflow-y: auto;
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+    ::-webkit-scrollbar-track {
+        background: #f1f1f1;
+    }
+    ::-webkit-scrollbar-thumb {
+        background-color: #888;
+        border-radius: 5px;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: #555;
+    }
+}
+
