--- a/front-end/src/app/pages/adm/aliquota/aliquota.component.scss
+++ b/front-end/src/app/pages/adm/aliquota/aliquota.component.scss
@@ -1,7 +1,8 @@
 .inner-content, .content {
-    padding: 0px;
-    height: 100%;
-    background-color: red;
-  }
+  padding: 0px;
+  height: 100%;
+}
 
-  
+.menu-adm {
+  height: 100%;
+}
