--- a/front-end/src/app/pages/icms/icms-notas-processadas/icms-notas-processadas.component.html
+++ b/front-end/src/app/pages/icms/icms-notas-processadas/icms-notas-processadas.component.html
@@ -66,7 +66,7 @@
             <tr>
                 <td nzWidth="5%" [nzAlign]="'right'" colspan="8" class="btt-add">
                     <ng-container>
-                        <button nz-button [nzSize]="'large'" class="botao botaoAdicionar" routerLink="/icms/notas-carregar" routerLinkActive="active">Adicionar Nota</button>
+                        <button nz-button [nzSize]="'large'" class="botao botaoAdicionar" routerLink="/icms/importar-nota" routerLinkActive="active">Adicionar Nota</button>
                     </ng-container>
                 </td>
             </tr>
