feat: nova tela grupo-notas a tela grupo-notas é para juntas as notas processadas em um unica inportação de notas

--- a/front-end/src/app/pages/inicio/inicio.component.html
+++ b/front-end/src/app/pages/inicio/inicio.component.html
@@ -34,7 +34,7 @@
         </td>
         <td [nzAlign]="'center'">
           <ng-container *ngIf="data.button">
-            <button nz-button [nzSize]="'large'" class="botao botaoGerenciar"  routerLink="/icms/notas-processadas" routerLinkActive="active">Gerenciar</button>
+            <button nz-button [nzSize]="'large'" class="botao botaoGerenciar"  routerLink="/icms/grupo-notas" routerLinkActive="active">Gerenciar</button>
           </ng-container>
           <ng-container *ngIf="!data.button">
             <button nz-button [nzSize]="'large'" class="botao botaoAdicionar">+</button>
