Feat: Utilização do componente ADM e produtos-form funcional
Utilização do componente de ADM nas telas de listagem de produtos e aliquotas, implementação do componente Produtos-form funcional e integrado e implementado o retorno para a tela de listagem, além de pequenas atualizações de estilização nos formulários e listagem desses dois componentes

--- a/front-end/src/app/pages/adm/aliquota-form/aliquota-form.component.html
+++ b/front-end/src/app/pages/adm/aliquota-form/aliquota-form.component.html
@@ -27,7 +27,10 @@
             <nz-form-item>
                 <nz-form-label nzSpan="24">Porcentagem</nz-form-label>
                 <nz-form-control>
-                    <input nz-input nz-col nzSize="large" nzSpan="24" placeholder="Porcentagem" [(ngModel)]="aliquota.porcentagem" [ngModelOptions]="{standalone: true}" ngDefaultControl/>
+                    <nz-input-number-group nzAddOnAfter="%">
+                        <nz-input-number [(ngModel)]="aliquota.porcentagem" [ngModelOptions]="{standalone: true}" ngDefaultControl
+                            [nzStep]="1" [nzMax]="100" [nzMin]="0.1" [nzInputMode]="'decimal'"></nz-input-number>
+                      </nz-input-number-group>
                 </nz-form-control>
             </nz-form-item>
         </nz-col>
