--- a/front-end/src/app/pages/adm/adm.component.html
+++ b/front-end/src/app/pages/adm/adm.component.html
@@ -1,6 +1,6 @@
-<nz-layout style="height: 100%;">
-    <nz-layout style="height: 100%;">
-        <nz-sider nzTheme="light">
+<nz-layout>
+    <nz-layout>
+        <nz-sider nzTheme="light" class="ant-menu-vertical">
             <ul nz-menu [nzMode]="'vertical'" [nzTheme]="'light'" class="menu-adm">
                 <li nz-menu-item routerLink="/adm/produtos" routerLinkActive="active">
                     <span nz-icon nzType="credit-card" nzTheme="outline"></span>
@@ -13,7 +13,7 @@
             </ul>
         </nz-sider>
         <nz-content class="content">
-            <ng-content select="conteudoCentral"></ng-content>
+            <ng-content select="[conteudoCentral]"></ng-content>
         </nz-content>
     </nz-layout>
 </nz-layout>
