--- a/front-end/src/app/pages/adm/produtos/produtos.component.html
+++ b/front-end/src/app/pages/adm/produtos/produtos.component.html
@@ -34,7 +34,7 @@
                         <td> {{ data.cfop }}</td>
                         <td [nzAlign]="'center'">
                             <button nz-button [nzSize]="'large'" nzType="primary"
-                                class="botao botaoAdicionar">Editar</button>
+                                class="botao botaoEditar" (click)="editarItem(data)">Editar</button>
                         </td>
                     </tr>
                 </tbody>
